packages/forge-dsl/fixtures/errors/e16-missing-include.fable
// expect: FORGE207
INCLUDE no-such-file.fable

-> go
=== go ===
Onward.
-> END
